# Karinote

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  config.py  db.py  karinote.py  pyproject.toml  utils.py
RedPar/: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
RedPar/scripts/: karinote_bridge.py
RedPar/src/main/: index.ts  preload.ts
RedPar/src/renderer/: app.ts  karinote.ts  live2d.ts  main.ts  style.css  tts.ts
commands/: mood.py  sleep.py
